# vsbillboards

./: CMakeLists.txt  README.md
include/: camera.h  util.h
res/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera.cpp  main.cpp  util.cpp
